--- a/project.css
+++ b/project.css
@@ -47,7 +47,7 @@ body {
 .members {
   width: 100%;
   height: 30%;
-  background-color: #00ff00;
+  background-color: grey;
   position: relative;
   display: flex;
 }
@@ -124,10 +124,104 @@ body {
 .timeline-point[data-tooltip]:hover:after {
   display: block;
 }
+.leader{
+  width: 220px;
+  float: left;
+  margin-left: 100px;
+  margin-top:10px;
+}
+.leader h2{
+  letter-spacing: 1px;
+  font-size: 25px;
+  color: white;
+  font-style: italic;
+}
 
 .member{
-  height: 100px;
-  width: 100px;
-  background: red;
+  height: 220px;
+  width: 220px;
+  background-color: #CBCBCB;
   border-radius: 50%;
+  color: black;  
+  position: absolute;
+}
+.name{
+  padding-top: 37px;
+  padding-left:77px;
+  text-align: center;
+  letter-spacing: 1.2px;
+  font-size: 25px;
+  transition: ease-out 0.2s;
+  transition-property: opacity;
+  position: absolute;
+}
+
+.intro{
+  padding-top:30px;
+  padding-left: 35px;
+  width: 180px;
+  position: absolute;
+  color: black;
+  opacity: 0;
+  transition-property: opacity;
+  position: absolute;
+}
+#icon{
+  color: black;
+  position: absolute;
+  bottom: 35px;
+  left: 95px;
+  font-size: 20px;
+  opacity: 0;
+  transition-property: opacity;
+  position: absolute;
+}
+.member:hover h3{
+  opacity: 0;
+}
+.member:hover .intro{
+  opacity: 1;
+}
+.member:hover #icon{
+  opacity: 1;
+}
+#leader1{
+  margin-top: 10px;
+}
+#leader2{
+  margin-top: 280px;
+}
+.developer{
+  float: left;
+  margin-left: 200px;
+  margin-top:10px;
+}
+.developer h2{
+  letter-spacing: 1px;
+  font-size: 25px;
+  color: white;
+  font-style: italic;
+}
+#dev3{
+  margin-left: 320px;
+  margin-top:10px;
+}
+#dev4{
+  margin-left: 320px;
+  margin-top:280px;
+}
+#dev1{
+  margin-top: 10px;
+}
+#dev2{
+  margin-top: 280px;
+}
+#dev5{
+  margin-left: 640px;
+  margin-top:10px;
+
+}
+#dev6{
+  margin-left: 640px;
+  margin-top:280px;
 }
