--- a/project.css
+++ b/project.css
@@ -47,7 +47,7 @@ body {
 .members {
   width: 100%;
   height: 30%;
-  background-color: grey;
+  background-color: white;
   position: relative;
   display: flex;
 }
@@ -133,14 +133,15 @@ body {
 .leader h2{
   letter-spacing: 1px;
   font-size: 25px;
-  color: white;
+  color: black;
   font-style: italic;
+  margin-left: 30%;
 }
 
 .member{
   height: 220px;
   width: 220px;
-  background-color: #CBCBCB;
+  background-color: #c0ded9;
   border-radius: 50%;
   color: black;  
   position: absolute;
@@ -151,21 +152,13 @@ body {
   text-align: center;
   letter-spacing: 1.2px;
   font-size: 25px;
-  transition: ease-out 0.2s;
+  transition: ease-in 0.2s;
   transition-property: opacity;
   position: absolute;
+  opacity: 0;
+  line-height: 20px;
 }
 
-.intro{
-  padding-top:30px;
-  padding-left: 35px;
-  width: 180px;
-  position: absolute;
-  color: black;
-  opacity: 0;
-  transition-property: opacity;
-  position: absolute;
-}
 #icon{
   color: black;
   position: absolute;
@@ -177,9 +170,6 @@ body {
   position: absolute;
 }
 .member:hover h3{
-  opacity: 0;
-}
-.member:hover .intro{
   opacity: 1;
 }
 .member:hover #icon{
@@ -199,8 +189,9 @@ body {
 .developer h2{
   letter-spacing: 1px;
   font-size: 25px;
-  color: white;
+  color: black;
   font-style: italic;
+  margin-left: 30%;
 }
 #dev3{
   margin-left: 320px;
