--- a/riceapps-master/riceapps-org-website-master/aboutus.css
+++ b/riceapps-master/riceapps-org-website-master/aboutus.css
@@ -19,7 +19,7 @@ canvas {
 #particles-js {
   position: absolute;
   width: 100%;
-  height: 450%;
+  height: 350%;
   /* Added height but that removed the three chair photos */
   background-color: #fff;
   background-image: url("");
@@ -96,33 +96,20 @@ p {
   margin-left: 20%;
   width: 60%;
   z-index: 2;
-  margin-top: 15%;
 }
 .aboutus{
   width: 100%;
   border: 1px solid black;
 }
-.sticky {
-  position: fixed;
-  top: 0px;
-  width: 60%;
-  z-index: 3;
-}
 
-.sticky + p {
-  padding-top: 102px;
-  z-index: 3;
-}
-.letters{
-  width: 80%;
-  z-index: 9999;
+#letters{
+  margin-top: 7rem;
 }
 .letter{
-  width: 25%;
+  width: 20%;
   padding: 4%;
   display: inline-block;
   z-index: 1;
-  z-index: 9999;
 }
 
 .chair{
@@ -132,7 +119,7 @@ p {
   border-radius: 50%;
   color: white;
   z-index: 5;
-  margin-left:25%;
+  margin-left:10%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,25 +128,21 @@ p {
 }
 
 #t3{
-  width: 100%;
-  z-index: 9999;
+  width: 60%;
 }
 #p3{
   margin-top: 50px;
   width: 100%;
-  height: 800px;
-  z-index: 9999;
+  margin-left: 10%;
 }
 .content{
   font-family: 'Roboto', sans-serif;
   font-size:1.2em;
   line-height: 2.5em;
   text-align: left;
-  z-index: 9999;
 }
 .chair p{
   font-size: 15px;
-  z-index: 9999;
 }
 .chair img{
   z-index: 1;
@@ -193,4 +176,16 @@ p {
 }
 .chair:hover img{
   opacity: 0.2;
+}
+#t1{
+  border-bottom: 1px solid black;
+}
+#t2{
+  border-bottom: 1px solid black;
+}
+#t3{
+  border-bottom: 1px solid black;
+}
+#vision{
+  margin-top: 7rem;
 }
